--- a/src/BridgeHub/BridgeHub.csproj
+++ b/src/BridgeHub/BridgeHub.csproj
@@ -60,6 +60,13 @@
     <Compile Include="Controls\LightDashboardControl.Designer.cs">
       <DependentUpon>LightDashboardControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\StringExt.cs" />
+    <Compile Include="Forms\LightDetailsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LightDetailsForm.Designer.cs">
+      <DependentUpon>LightDetailsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\LightForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +89,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\LightDashboardControl.resx">
       <DependentUpon>LightDashboardControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LightDetailsForm.resx">
+      <DependentUpon>LightDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LightForm.resx">
       <DependentUpon>LightForm.cs</DependentUpon>
